# stellaris-wasm-miner

./: .gitmodules  README.md
.devcontainer/: devcontainer.json
wasm-miner/: .gitignore  Cargo.toml  README.md  build.sh  config.example  index.html  miner.js  mining-worker.js  serve.sh  styles.css
wasm-miner/src/: lib.rs
